--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: http://sustained.github.io/svenska-discord
+url: http://sustained.github.io/svenska-discord/
 baseurl: /
 theme: jekyll-theme-leap-day
 title: "Svenska Discord"
