--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: http://sustained.github.io/svenska-discord/
-baseurl: /
+url: http://sustained.github.io/
+baseurl: /svenska-discord/
 theme: jekyll-theme-leap-day
 title: "Svenska Discord"
 future: true
