Add Språkrådet thing.

--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -1,6 +1,12 @@
 -
   question: What is the difference between för att, därför att and eftersom?
-  answer:
+  answer: ">
+  Enligt Språkrådet:
+
+  \"Därför att\" hänvisar till en orsak man tror att lyssnaren inte känner till.
+  
+  \"Eftersom\" till en orsak man tror att lyssnaren redan känner till.
+  "
 -
   question: 
   answer:
