--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -3,10 +3,8 @@
   answer: "
   Enligt Språkrådet:
 
-  \"Därför att\" hänvisar till en orsak man tror att lyssnaren inte känner till.
-  
-  \"Eftersom\" till en orsak man tror att lyssnaren redan känner till.
-  "
+  > `Därför att` hänvisar till en orsak man tror att lyssnaren inte känner till.
+  > `Eftersom`, däremot, till en orsak man tror att lyssnaren redan känner till."
 -
   question: 
   answer:
