Shorten heading text.

--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -1,5 +1,5 @@
 -
-  question: What is the difference between för att, därför att and eftersom?
+  question: Skillnaden mellan för att, därför att and eftersom?
   answer: "
   Enligt Språkrådet:
 
