--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -1,6 +1,13 @@
 -
   question: Skillnaden mellan för att, därför att and eftersom?
-  answer: "
+
+  answer_sv: "
   Enligt Språkrådet:
 
   > 'Därför att' hänvisar till en orsak man tror att lyssnaren inte känner till. 'Eftersom', däremot, till en orsak man tror att lyssnaren redan känner till."
+
+  answer_sv: "
+  According to Språkrådet:
+
+  > 'Därför att' refers to a cause that the lisener is not aware of/does not recognise. 'Eftersom', on the oter hand, to a cause that the listener already recognises."
+
