--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -1,5 +1,5 @@
 -
-  question: Skillnaden mellan för att, därför att and eftersom?
+  question: Skillnaden mellan "därför att"" and "eftersom"?
 
   answer_sv: "
   Enligt Språkrådet:
@@ -12,8 +12,65 @@
   > 'Därför att' refers to a cause that the lisener is not aware of/does not recognise. 'Eftersom', on the oter hand, to a cause that the listener already recognises."
 
 -
-  question: Blah blah blah.
+  question: Vad betyder egentligen "för att"?
 
-  answer_sv: Blah.
+  answer_sv: Coming soon.
 
-  answer_en: Blah.
+  answer_en: Coming soon.
+
+-
+  question: När använder man "som"" i stället för "att"?
+
+  answer_sv: Coming soon.
+
+  answer_en: Coming soon.
+
+-
+  question: Vad betyder egentligen "för att"?
+
+  answer_sv: Coming soon.
+
+  answer_en: Coming soon.
+
+-
+  question: Olika sätt att "det" översätts.
+
+  answer_sv: Coming soon.
+
+  answer_en: Coming soon.
+
+-
+  question: Svårigheter med ordet "om".
+
+  answer_sv: Coming soon.
+
+  answer_en: Coming soon.
+
+-
+  question: Svårt med hur "på" brukar användas.
+
+  answer_sv: Coming soon.
+
+  answer_en: Coming soon.
+
+-
+  question: För, till, åt - hur vet man vilken att välja?
+
+  answer_sv: Coming soon.
+
+  answer_en: Coming soon.
+
+-
+  question: När används "faktiskt", "egentligen" och "verkligen"?
+
+  answer_sv: Coming soon.
+
+  answer_en: Coming soon.
+
+-
+  question: "Förr", "före", "förrän", "förut"... hjälp mig!
+
+  answer_sv: Coming soon.
+
+  answer_en: Coming soon.
+
