--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -68,7 +68,7 @@
   answer_en: Coming soon.
 
 -
-  question: "Förr", "före", "förrän", "förut"... hjälp mig!
+  question: \"Förr\", \"före\", \"förrän\", \"förut\"... hjälp mig!
 
   answer_sv: Coming soon.
 
