--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -4,12 +4,12 @@
   question_sv: What is the difference between "därför att" and "eftersom"?
 
   answer_sv: "
-  Enligt Språkrådet:
+  *Enligt Språkrådet:*
 
   > 'Därför att' hänvisar till en orsak man tror att lyssnaren inte känner till. 'Eftersom', däremot, till en orsak man tror att lyssnaren redan känner till."
 
   answer_en: "
-  According to Språkrådet:
+  *According to Språkrådet:*
 
   > 'Därför att' refers to a cause that the lisener is not aware of/does not recognise. 'Eftersom', on the oter hand, to a cause that the listener already recognises."
 
