--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -1,7 +1,7 @@
 -
   question_en: What is the difference between "därför att" and "eftersom"?
 
-  question_sv: Vad är skillnaden mellan "därför att"" och "eftersom"?
+  question_sv: Vad är skillnaden mellan "därför att" och "eftersom"?
 
   answer_sv: "
   *Enligt Språkrådet:*
