--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -67,7 +67,7 @@
     - **Q.** Vad är __det__?
     - **A.** Det är __jordgubbar__.
 
-    ```Important: As you may have noticed, we use "det" no matter the gender or plurality of the noun, in such cases.```
+    **__Important:__** As you may have noticed, we use "det" no matter the gender or plurality of the noun, in such cases.
 
     ---
 
