--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: http://sustained.github.io/
+url: http://sustained.github.io
 baseurl: /svenska-discord/
 theme: jekyll-theme-leap-day
 title: "Svenska Discord"
