--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -38,12 +38,12 @@
 
   answer_en: |
     Det has many uses/meanings. We will try to cover them all below.
+    
+    **Note:** In all cases, both the "det" as well as the thing that the "det" is referring/corresponding too will be in bold.
 
     ---
 
     Det can refer back to a word, phrase or clause that is already __known__.
-    
-    In the following examples, the "det" is referring back to the underlined part.
     
     - **Q.** När kommer __tåget__?
     - **A.** __Det__ kommer klockan sju.
@@ -67,7 +67,7 @@
     - **Q.** Vad är __det__?
     - **A.** Det är __jordgubbar__.
 
-    **__Important:__** As you may have noticed, we use "det" no matter the gender or plurality of the noun, in such cases.
+    **Important:** As you may have noticed, we use "det" no matter the gender or plurality of the noun, in such cases.
 
     ---
 
