--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -59,34 +59,49 @@
       <tbody>
         <tr>
           <td markdown="span">
-    - **Q.** När kommer __tåget__?
-    - **A.** __Det__ kommer klockan sju.
+            <ul>
+              <li><strong>Q.</strong> När kommer __tåget__?</li>
+              <li><strong>A.</strong> __Det__ kommer klockan sju.</li>
+            </ul>
           </td>
+
           <td markdown="span">
-    - **Q.** When will/does __the train__ come?
-    - **A.** __It__ comes at seven o'clock.
+            <ul>
+              <li><strong>Q.</strong> When will/does __the train__ come?</li>
+              <li><strong>A.</strong> __It__ comes at seven o'clock.</li>
+            </ul>
           </td>
         </tr>
 
         <tr>
           <td markdown="span">
-    - **Q.** Kan du __spelar gitar__?
-    - **A.** Ja, __det__ kan jag.
+            <ul>
+              <li><strong>Q.</strong> Kan du __spelar gitar__?</li>
+              <li><strong>A.</strong> Ja, __det__ kan jag.</li>
+            </ul>
           </td>
+
           <td markdown="span">
-    - **Q.** Can you __play guitar__?
-    - **A.** Yes, I can (do __that__).
+            <ul>
+              <li><strong>Q.</strong> Can you __play guitar__?</li>
+              <li><strong>A.</strong> Yes, I can (do __that__).</li>
+            </ul>
           </td>
         </tr>
 
         <tr>
           <td markdown="span">
-    - **Q.** __När börjar mötet__?
-    - **A.** __Det__ vet jag inte.
+            <ul>
+              <li><strong>Q.</strong> __När börjar mötet__?</li>
+              <li><strong>A.</strong> __Det__ vet jag inte.</li>
+            </ul>
           </td>
+
           <td markdown="span">
-    - **Q.** __When does the meeting begin__?
-    - **A.** I don't know (when __that__ is).
+            <ul>
+              <li><strong>Q.</strong>  __When does the meeting begin__?</li>
+              <li><strong>A.</strong> I don't know (when __that__ is).</li>
+            </ul>
           </td>
         </tr>
       </tbody>
