--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -43,6 +43,8 @@
 
     ---
 
+    ### Det as a word, phrase or clause.
+
     Det can refer back to a word, phrase or clause that is already __known__.
     
     <table>
@@ -106,6 +108,8 @@
 
     ---
 
+    ### Det as a form subject.
+
     Det can also act as a formal subject and refer back to something th at is not yet known.
 
     <table>
@@ -130,7 +134,7 @@
           <td>
             <ul>
               <li markdown="span"><strong>Q.</strong> What is __that__?</li>
-              <li markdown="span"><strong>A.</strong> It is __Agneta and Björn.</li>
+              <li markdown="span"><strong>A.</strong> It is __Agneta and Björn__.</li>
             </ul>
           </td>
         </tr>
@@ -171,6 +175,8 @@
 
     ---
 
+    ### Det as a verb phrase.
+
     Det can also refer to a verb phrase. That is to say that the following are equivalent.
 
     <table>
@@ -203,6 +209,8 @@
     </table>
 
     ---
+
+    ### Det as an "introducer"
 
     Det can be used to introduce something new into a sentence, much like "there" in English.
     
@@ -242,6 +250,8 @@
 
     ---
 
+    ### Det as filler / because of grammar
+    
     In Swedish, as in English, one uses det when referring to the weather:
 
     <table>
