--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -43,7 +43,7 @@
 
     ---
 
-    ### Det as a word, phrase or clause.
+    ### Det as a Word, Phrase or Clause
 
     Det can refer back to a word, phrase or clause that is already __known__.
     
@@ -108,7 +108,7 @@
 
     ---
 
-    ### Det as a form subject.
+    ### Det as a Formal Subject
 
     Det can also act as a formal subject and refer back to something th at is not yet known.
 
@@ -175,7 +175,7 @@
 
     ---
 
-    ### Det as a verb phrase.
+    ### Det as a Verb Phrase
 
     Det can also refer to a verb phrase. That is to say that the following are equivalent.
 
@@ -210,7 +210,7 @@
 
     ---
 
-    ### Det as an "introducer"
+    ### Det as an Introduction
 
     Det can be used to introduce something new into a sentence, much like "there" in English.
     
@@ -250,8 +250,8 @@
 
     ---
 
-    ### Det as filler / because of grammar
-    
+    ### Det as Filler / because of Grammar
+
     In Swedish, as in English, one uses det when referring to the weather:
 
     <table>
