I guess Swedish is N/A for this one...

--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -34,7 +34,7 @@
 
   question_sv: Olika sätt att "det" översätts i olika situationer.
 
-  answer_sv: Coming soon.
+  answer_sv: N/A
 
   answer_en: |
     Det has many uses/meanings. We will try to cover them all below.
