--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -39,7 +39,7 @@
   answer_en: |
     Det has many uses/meanings. We will try to cover them all below.
     
-    **Note:** In all cases, both the "det" as well as the thing that the "det" is referring/corresponding too will be in bold.
+    **Note:** In all cases, both the "det" as well as the thing that the "det" is referring/corresponding to will be in bold.
 
     ---
 
