Fix strong tags.

--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -127,8 +127,8 @@
         <tr>
           <td>
             <ul>
-              <li markdown="span"><strong>Q. Vem är __det__?</strong> </li>
-              <li markdown="span"><strong>A. Det är __Agneta och Björn__.</strong> </li>
+              <li markdown="span"><strong>Q.</strong> Vem är __det__?</li>
+              <li markdown="span"><strong>A.</strong> Det är __Agneta och Björn__.</li>
             </ul>
           </td>
           <td>
