--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -77,7 +77,7 @@
         <tr>
           <td>
             <ul>
-              <li markdown="span" markdown="span"><strong>Q.</strong> Kan du __spelar gitar__?</li>
+              <li markdown="span" markdown="span"><strong>Q.</strong> Kan du __spela gitar__?</li>
               <li markdown="span"><strong>A.</strong> Ja, __det__ kan jag.</li>
             </ul>
           </td>
