Change "det" to "vem" and erase Agneta from existence.

--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -128,13 +128,13 @@
           <td>
             <ul>
               <li markdown="span"><strong>Q.</strong> Vem är __det__?</li>
-              <li markdown="span"><strong>A.</strong> Det är __Agneta och Björn__.</li>
+              <li markdown="span"><strong>A.</strong> Det är __Björn__.</li>
             </ul>
           </td>
           <td>
             <ul>
-              <li markdown="span"><strong>Q.</strong> What is __that__?</li>
-              <li markdown="span"><strong>A.</strong> It is __Agneta and Björn__.</li>
+              <li markdown="span"><strong>Q.</strong> Who is __that__?</li>
+              <li markdown="span"><strong>A.</strong> It is __Björn__.</li>
             </ul>
           </td>
         </tr>
