--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -10,7 +10,7 @@
   answer_en: |
     \*According to Språkrådet:\*
 
-    \> 'Därför att' refers to a cause that the lisener is not aware of/does not recognise. 'Eftersom', on the oter hand, to a cause that the listener already recognises.
+    \> 'Därför att' refers to a cause that the listener is not aware of/does not recognise. 'Eftersom', on the other hand, to a cause that the listener already recognises.
 
 -
   question_en: What does "för att" actually mean?
@@ -110,7 +110,7 @@
 
     ### Det as a Formal Subject
 
-    Det can also act as a formal subject and refer back to something th at is not yet known.
+    Det can also act as a formal subject and refer back to something that is not yet known.
 
     <table>
       <colgroup>
@@ -267,7 +267,7 @@
 
       <tbody>
         <tr>
-          <td markdown="span">Det __regar__.</td>
+          <td markdown="span">Det __regnar__.</td>
           <td markdown="span">It's __raining__.</td>
         </tr>
 
