--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -4,13 +4,12 @@
   question_sv: Vad är skillnaden mellan "därför att" och "eftersom"?
 
   answer_sv: |
-    \*Enligt Språkrådet:\*
-    \> 'Därför att' hänvisar till en orsak man tror att lyssnaren inte känner till. 'Eftersom', däremot, till en orsak man tror att lyssnaren redan känner till.
+    *Enligt Språkrådet:*
+    > 'Därför att' hänvisar till en orsak man tror att lyssnaren inte känner till. 'Eftersom', däremot, till en orsak man tror att lyssnaren redan känner till.
 
   answer_en: |
-    \*According to Språkrådet:\*
-
-    \> 'Därför att' refers to a cause that the listener is not aware of/does not recognise. 'Eftersom', on the other hand, to a cause that the listener already recognises.
+    *According to Språkrådet:*
+    > 'Därför att' refers to a cause that the listener is not aware of/does not recognise. 'Eftersom', on the other hand, to a cause that the listener already recognises.
 
 -
   question_en: What does "för att" actually mean?
@@ -349,7 +348,9 @@
   answer_en: Coming soon.
 
 -
+  question_en: '""Förr", "före", "förrän", "förut"... help me!"'
   question_sv: '""Förr", "före", "förrän", "förut"... hjälp mig!"'
+  
 
   answer_sv: Coming soon.
 
