--- a/_data/faqs.yaml
+++ b/_data/faqs.yaml
@@ -25,6 +25,10 @@
   question_sv: När använder man "som"" i stället för "att"?
 
   answer_sv: |
+    #### Som
+
+    ##### När man sätter ihop saker
+
     I stället för att ha två separata satser kan vi sätta ihop dem genom att använda "som" som relativa pronomen.
 
       Jag har en hund. Hunden gillar köttbullar.
@@ -42,12 +46,16 @@
       2. Ann leker med dockorna __som__ (which) hon fick i jullkapp.
       3. Min cykel, __som__ (that) jag fick i jullkapp, har 21 växlar.
     
+    ##### När man jamför saker
+
     Som kan även betyda "as" och användas jämföra saker.
 
       1. Han är lika stor som jag.
       2. Det är inte lika svårt som du tror.
     
-    ----
+    #### Att
+
+    ##### Som infinitivmärke
 
     Eftersom **att**, samt "som", också kan översättas som "that" brukar blandar folk ihop dem.
 
@@ -56,12 +64,18 @@
       Pojken tycker om __att__ (to) *leka* med sin hund.
       Hunden älskar __att__ (to) *springa*.
     
-    En annan användning är som konjunktion mellan sats och bisats och det är den användningen som påverkar som-att-förvirringen.
+    ##### Som konjunktion
+    
+    En annan användning är som konjunktion mellan sats och bisats och det är den användningen som verkar påverka som-att-förvirringen.
 
       Bengt säger __att__ (that) det är varmt ute.
       Hon tror __att__ (that) boken är gammal.
 
   answer_en: |
+    #### Som
+
+    ##### When you are connecting things
+
     Instead of having two separate clauses, we can connect them by using “som” as a relative pronoun.
 
       I have a dog. The dog likes meatballs.
@@ -79,12 +93,16 @@
       2. Ann plays with the dolls __which__ (som) she got as a Christmas present.
       3. My bike, __that__ (som) I got for Christmas, has 21 gears.
 
+    ##### When you are comparing things
+
     Som can also take the meaning of "as" and be used to compare things.
 
       1. He is just as big __as__ (som) me.
       2. It is not as difficult __as__ (some) you think.
     
-    ----
+    #### Att
+
+    ##### As an infinitive marker
 
     People usually confuse **att** and "som" due to them both sometimes translating to "that".
 
@@ -92,6 +110,8 @@
 
       The boy likes __to__ *play* with his dog.
       The dog loves __to__ *run*.
+    
+    ##### As a conjunction
     
     Another usage of **att** is as a conjunction between a clause and a subclause and it is this which seems to cause the som-att-confusion.
 
